--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
   </head>
 
   <body>
-    Blockquote is block level element
-    <!-- Blockquote is flow element (i.e. “block level” element) -->
-    <blockquote>
-      How can I keep the audience engaged with this article on quotations?
-      Grammar and a charming personality will only go so far.
-    </blockquote>
+    <!-- Q tags (<q>) are for inline quotes -->
+    <q>I could hand out cupcakes to keep them interested</q> the article's
+    author thought to himself.
   </body>
 </html>
