The citation attribute

--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
   </head>
 
   <body>
-    <!-- Q tags (<q>) are for inline quotes -->
-    <q>I could hand out cupcakes to keep them interested</q> the article's
-    author thought to himself.
+    <p>
+      The officer left a note saying
+      <q cite="https://johnrhea.com/summons" class="show-cite"
+        >You have been summoned to appear on the 4th day of January on charges
+        of attempted reader bribery.</q
+      >
+    </p>
+
+    <p>
+      The officer left a note saying
+      <q cite="https://johnrhea.com/summons" class="on-hover"
+        >You have been summoned to appear on the 4th day of January on charges
+        of attempted reader bribery.</q
+      >
+    </p>
   </body>
 </html>
