--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
   </head>
 
   <body>
-    The author of
-    <cite>Quoting in HTML: Quotations, Citations, and Blockquotes</cite> makes
-    promises about baked goods that he can't keep.
+    <p>Paragraph before quote.</p>
 
-    <!-- This is apparently wrong -->
-    <blockquote>
-      Quote about cupcake distribution from an article
-      <cite>The Article</cite>
-    </blockquote>
+    <figure class="quote">
+      <blockquote>
+        But web browsers aren’t like web servers. If your back-end code is
+        getting so big that it’s starting to run noticably slowly, you can throw
+        more computing power at it by scaling up your server. That’s not an
+        option on the front-end where you don’t really have
+        <em>one</em> run-time environment—your end users have their own run-time
+        environment with its own constraints around computing power
+        <strong>and</strong> network connectivity.
+      </blockquote>
+      <figcaption>&mdash; Jeremy Keith, <cite>Mental models</cite></figcaption>
+    </figure>
 
-    <!-- This is apparently wrong -->
-    <div class="need-to-style-together">
-      <blockquote>Quote about cupcake distribution from an article</blockquote>
-      <cite>The Article</cite>
-    </div>
+    <p>Paragraph after quote.</p>
   </body>
 </html>
