Multi-level quoting

--- a/index.html
+++ b/index.html
@@ -8,11 +8,23 @@
   </head>
 
   <body>
-    <p>The judge openlyn disapproved of the author's tactics.</p>
+    <p>
+      The author next defended himself with
+      <q
+        >I never said, <q>I’ll get the readers on my side with cupcakes!</q> I
+        only implied it.</q
+      >
+    </p>
 
-    <blockquote>
-      Never have I seen such bald and shameless attempts at garnering an
-      audiences' approval through frosted deliciousness.
-    </blockquote>
+    <p class="british">
+      The author next defended himself with
+      <q
+        >I never said,
+        <q
+          >I’ll get the <q>readers on <q>my</q> side with</q> cupcakes!</q
+        >
+        I only implied it.</q
+      >
+    </p>
   </body>
 </html>
