--- a/index.html
+++ b/index.html
@@ -8,23 +8,8 @@
   </head>
 
   <body>
-    <p>
-      The author next defended himself with
-      <q
-        >I never said, <q>I’ll get the readers on my side with cupcakes!</q> I
-        only implied it.</q
-      >
-    </p>
-
-    <p class="british">
-      The author next defended himself with
-      <q
-        >I never said,
-        <q
-          >I’ll get the <q>readers on <q>my</q> side with</q> cupcakes!</q
-        >
-        I only implied it.</q
-      >
-    </p>
+    The author chuckled awkwardly to himself.
+    <blockquote>I hope it's only the punctuation that's hanging and not the author of this article whom you truly love and
+      adore even if the cupcakes he offered you were stale and tasted like sawdust, right? Right?</blockquote
   </body>
 </html>
