--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
   <body>
     The author chuckled awkwardly to himself.
-    <blockquote>I hope it's only the punctuation that's hanging and not the author of this article whom you truly love and
-      adore even if the cupcakes he offered you were stale and tasted like sawdust, right? Right?</blockquote
+    <blockquote>
+      I hope it's only the punctuation that's hanging and not the author of this
+      article whom you truly love and adore even if the cupcakes he offered you
+      were stale and tasted like sawdust, right? Right?
+    </blockquote>
   </body>
 </html>
