animate quotation marks

--- a/index.html
+++ b/index.html
@@ -8,11 +8,24 @@
   </head>
 
   <body>
-    The author chuckled awkwardly to himself.
+    <p>The author finished with this:</p>
     <blockquote>
-      I hope it's only the punctuation that's hanging and not the author of this
-      article whom you truly love and adore even if the cupcakes he offered you
-      were stale and tasted like sawdust, right? Right?
+      Of all the things I didn't say, I didn't say
+      <q
+        >I definitely didn’t say
+        <q
+          >I did not say
+          <q
+            >I never said,
+            <q>I’ll get the readers on my side with cupcakes!</q> I only implied
+            it.</q
+          >
+          that’s totally and completely false. Look, Mr. Hamilton, here
+          completely agrees with me.</q
+        >
+        It was, rather, a couple of crisp Mr. Washingtons who did the talking</q
+      >
+      most.
     </blockquote>
   </body>
 </html>
